force-app/main/default/objects/Vehicle_Order__c/Vehicle_Order__c.object-meta.xml
<CustomObject>
    <label>Vehicle Order</label>
    <pluralLabel>Vehicle Orders</pluralLabel>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>